@@ -2,13 +2,13 @@
 Hash: SHA1
 
 AUX xfce4-netload-0.4.0-asneeded.patch 549 RMD160 1df5c37d045b17c9986d933ce72e6bc27f88e368 SHA1 203831bf57c2b988b8afc1cbb80533d8a5a8ac0d SHA256 9e8893efa3dda39b099d542367aaa3e99e5e7c3fa3521a0a6f1777b314e6bbe8
-EBUILD xfce4-netload-9999.ebuild 432 RMD160 5b29e7c059b2d464c523aaab981e6992520435b3 SHA1 b629334f7051322cee607779a8237088b49589b6 SHA256 840805626dff0c35eac33fc5196056743d378e9e19a967c764cb7cbaf8da422c
-MISC ChangeLog 605 RMD160 73d5bbc2053ca877b1513cd16d9b85983fdf6ec8 SHA1 5a4f37af24213671cab52cfec75eb50ce12de9bb SHA256 9d79b550d4a3f4f268c500e4b0ea335a532cfb08ee033497700126a4be0fd353
+EBUILD xfce4-netload-9999.ebuild 403 RMD160 686abc2c025192c6da8fbb2335a6f63136895729 SHA1 67a1e3aa70c0db33bce321526875a49da21137dd SHA256 06bcd9d48056ca5fce11e58065850b4e40d71b33b6987c0e49db0f195009f4ac
+MISC ChangeLog 725 RMD160 49cef78fe4cc05ba375e59cefdf843b2fcd84d57 SHA1 15b207160d6a2b5275f0eeebf3b04e765a2e9ed7 SHA256 b70921832d02688f47df3dc6e145dc5e9a09b660ffb9f708ab5f15623d7ac5da
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk9vnEACgkQKhnDs22gwa+WBACgrYBbCrfHIt8VeURl3oBFfgdj
-TugAoLcQaDygbcHLVqdVmCoQ0RsPZKsS
-=noN/
+iEYEARECAAYFAklK2oUACgkQKhnDs22gwa9SZgCeNHjUBpxdRj3xFXtzodXCP040
+OXkAoN+TiurknXZ0XmpBqTkeQLvBmIdZ
+=yGnW
 -----END PGP SIGNATURE-----
